# credit-default-pipeline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  METODOLOGY_README.md  README.md  docker-compose.airflow.yaml  dvc.yaml  kaggle_extraction (feature-engineering).ipynb  params.yaml  pyproject.toml  xai.py
.dvc/: config
app/: main.py
app/templates/: index.html
dags/: ml_pipeline_dag.py
src/: __init__.py  register_artifacts.py
src/data_loading/: load_data.py
src/data_preprocessing/: preprocess_data.py
src/feature_engineering/: engineer_features.py
src/model_evaluation/: evaluate_model.py
src/model_training/: train_model.py
