[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_classifier"
version = "0.4"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==2.10.5",
    "methodtools>=0.4.0",
    "flask>=2.2,<3.0",
    "gunicorn>=20.0,<23.0",
    "numpy>=2.0.0",
    "pandas<2.3.0",
    "scikit-learn==1.6.1",
    "xgboost==2.1.4",
    "category-encoders==2.9.0",
    "dagshub==0.5.9",
    "dvc==3.59.1",
    "kagglehub==1.0.0",
    "mlflow==2.22.1",
    "pathspec==0.11.2",
    "python-dotenv==1.1.0",
    "PyYAML==6.0.2"
]

[tool.setuptools.packages.find]
where = ["."]
